--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "description" : "Magnews integration",
-    "homepage" : "https://projects.italiamultimedia.com/italiamultimedia/magnews",
+    "homepage" : "https://github.com/italiamultimedia/magnews",
     "keywords" : [
         "italiamultimedia",
         "magnews"
